本番APIへの接続設定

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://0fd3g5sqd8.execute-api.ap-northeast-1.amazonaws.com/dev/api/v2
+VITE_API_URL=https://aq3000g1r5.execute-api.ap-northeast-1.amazonaws.com/prod/api/v2
