--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
+    "@mui/x-charts": "^7.22.2",
     "axios": "^1.7.7",
     "jotai": "^2.10.2",
     "react": "^18.3.1",
