--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1"
+    "react-router": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
