--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "react-router": "^7.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "9.16.0",
     "@types/node": "^22.7.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.9.0",
+    "eslint": "9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
@@ -36,7 +36,7 @@
     "prettier": "3.3.3",
     "sass": "^1.78.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
+    "typescript-eslint": "8.16.0",
     "vite": "^5.4.1",
     "yarn": "^1.22.22"
   }
