--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+     /* Use absolute path */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+    }
+   
   },
   "include": ["src"]
 }
