--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
     "@mui/x-charts": "^7.22.2",
+    "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
+    "dayjs": "^1.11.13",
     "jotai": "^2.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
